--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,17 @@ include(KDEFrameworkCompilerSettings)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
-
+set(MAILCOMMON_LIB_VERSION "5.1.42")
 set(KF5_VERSION "5.16.0")
 set(KDEPIMLIBS_LIB_VERSION "5.1.42")
-set(KDEPIM_LIB_VERSION "5.1.42")
+set(MESSAGELIB_LIB_VERSION "5.1.42")
 set(QT_REQUIRED_VERSION "5.4.0")
 set(KMIME_LIB_VERSION "4.87.0")
 set(KMAILTRANSPORT_LIB_VERSION "4.78.0")
 set(KLDAP_LIB_VERSION "4.80.0")
+set(MAILIMPORTER_LIB_VERSION "5.1.42")
+set(LIBKDEPIM_LIB_VERSION "5.1.42")
+set(PIMCOMMON_LIB_VERSION "5.1.42")
 
 find_package(KF5Akonadi ${KDEPIMLIBS_LIB_VERSION} CONFIG REQUIRED)
 find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets Test UiTools)
@@ -38,18 +41,18 @@ find_package(KF5Archive ${KF5_VERSION} CONFIG REQUIRED)
 find_package(KF5ItemViews ${KF5_VERSION} CONFIG REQUIRED)
 find_package(KF5WindowSystem ${KF5_VERSION} CONFIG REQUIRED)
 find_package(KF5XmlGui ${KF5_VERSION} CONFIG REQUIRED)
-find_package(KF5MessageViewer ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5TemplateParser ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5Libkdepim ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5PimCommon ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5MessageComposer ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5MessageCore ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5MailImporter ${KDEPIM_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5MessageViewer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5Libkdepim ${LIBKDEPIM_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5PimCommon ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5MessageComposer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5MessageCore ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5MailImporter ${MAILIMPORTER_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MailTransport ${KMAILTRANSPORT_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5Ldap ${KLDAP_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt5 CONFIG REQUIRED)
 
-ecm_setup_version(${KDEPIM_LIB_VERSION} VARIABLE_PREFIX MAILCOMMON
+ecm_setup_version(${MAILCOMMON_LIB_VERSION} VARIABLE_PREFIX MAILCOMMON
                         VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/mailcommon_version.h"
                         PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/KF5MailCommonConfigVersion.cmake"
                         SOVERSION 5
