--- a/KF5MailCommonConfig.cmake.in
+++ b/KF5MailCommonConfig.cmake.in
@@ -2,7 +2,7 @@
 
 find_dependency(KF5Akonadi "@KDEPIMLIBS_LIB_VERSION@")
 find_dependency(KF5AkonadiMime "@KDEPIMLIBS_LIB_VERSION@")
-find_dependency(KF5MessageComposer "@KDEPIM_LIB_VERSION@")
-find_dependency(KF5PimCommon "@KDEPIM_LIB_VERSION@")
+find_dependency(KF5MessageComposer "@MESSAGELIB_LIB_VERSION@")
+find_dependency(KF5PimCommon "@MESSAGELIB_LIB_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5MailCommonTargets.cmake")
