--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
 
-set(MAILCOMMON_LIB_VERSION "5.2.54")
+set(PIM_VERSION "5.2.54")
+set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
 set(KF5_VERSION "5.19.0")
 set(KDEPIMLIBS_LIB_VERSION "5.2.40")
 set(MESSAGELIB_LIB_VERSION "5.2.46")
