Fix variable name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ include(ECMAddTests)
 
 set(PIM_VERSION "5.2.80")
 set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
-set(KDEPIMLIBS_LIB_VERSION "5.2.80")
+set(AKONADIMIME_LIB_VERSION "5.2.80")
 set(MESSAGELIB_LIB_VERSION "5.2.80")
 set(QT_REQUIRED_VERSION "5.5.0")
 set(KMIME_LIB_VERSION "5.2.80")
@@ -50,7 +50,7 @@ find_package(KF5WindowSystem ${KF5_VERSION} CONFIG REQUIRED)
 find_package(KF5XmlGui ${KF5_VERSION} CONFIG REQUIRED)
 
 find_package(KF5Akonadi ${AKONADI_VERSION} CONFIG REQUIRED)
-find_package(KF5AkonadiMime ${KDEPIMLIBS_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5AkonadiMime ${AKONADIMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5Ldap ${KLDAP_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5Libkdepim ${LIBKDEPIM_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MailImporter ${MAILIMPORTER_LIB_VERSION} CONFIG REQUIRED)
