--- a/KF5MailCommonConfig.cmake.in
+++ b/KF5MailCommonConfig.cmake.in
@@ -1,7 +1,7 @@
 @PACKAGE_INIT@
 
-find_dependency(KF5Akonadi "@KDEPIMLIBS_LIB_VERSION@")
-find_dependency(KF5AkonadiMime "@KDEPIMLIBS_LIB_VERSION@")
+find_dependency(KF5Akonadi "@AKONADI_VERSION@")
+find_dependency(KF5AkonadiMime "@AKONADIMIME_LIB_VERSION@")
 find_dependency(KF5MessageComposer "@MESSAGELIB_LIB_VERSION@")
 find_dependency(KF5PimCommon "@MESSAGELIB_LIB_VERSION@")
 
