Add unittest for FolderTreeWidget.
This includes testing for:
- showing folders for the initial resources from the unittest env
- creating resources, they should appear in the tree
- creating a search folder, should create "Search / search123456"
- deleting that search folder, both should disappear, and things
shouldn't get corrupted (kitemmodels bug, fix pending, test disabled
until KF 5.26)

The dummykernel from src/filter/tests is moved up to autotests/ for sharing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,5 +112,6 @@ install(FILES
 )
 
 add_subdirectory(src)
+add_subdirectory(autotests)
 install( FILES mailcommon.categories DESTINATION ${KDE_INSTALL_CONFDIR} )
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
