--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(mndadvicedialoggui
 )
 
 
-set(kmfilterdialogtestgui_SRCS kmfilterdialogtestgui.cpp dummykernel.cpp)
+set(kmfilterdialogtestgui_SRCS kmfilterdialogtestgui.cpp ../../../autotests/dummykernel.cpp)
 add_executable(kmfilterdialogtestgui ${kmfilterdialogtestgui_SRCS})
 ecm_mark_as_test(kmfilterdialogtestgui)
 target_link_libraries(kmfilterdialogtestgui
