--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,7 @@ set(libmailcommon_filter_dialog
     filter/dialog/filteractionmissingtagdialog.cpp
     filter/dialog/filteractionmissingaccountdialog.cpp
     filter/dialog/filteractionmissingtemplatedialog.cpp
+    filter/dialog/filteractionmissingtransportdialog.cpp
     )
 
 
