--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -84,3 +84,14 @@ target_link_libraries(filteractionmissingaccountdialoggui
   KF5::I18n
   KF5::Completion
 )
+
+set(filteractionmissingtagdialoggui_SRCS filteractionmissingtagdialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtagdialog.cpp)
+add_executable(filteractionmissingtagdialoggui ${filteractionmissingtagdialoggui_SRCS})
+ecm_mark_as_test(filteractionmissingtagdialoggui)
+target_link_libraries(filteractionmissingtagdialoggui
+  Qt5::Core
+  Qt5::Gui
+  KF5::MailCommon
+  KF5::I18n
+  KF5::Completion
+)
