--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -250,3 +250,8 @@ add_mailcommon_filter_test(filteractionmissingtagdialogtest
     filteractionmissingtagdialogtest.cpp
     ../dialog/filteractionmissingtagdialog.cpp
     )
+
+add_mailcommon_filter_test(filteractionmissingidentitydialogtest
+    filteractionmissingidentitydialogtest.cpp
+    ../dialog/filteractionmissingidentitydialog.cpp
+    )
