--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -254,4 +254,5 @@ add_mailcommon_filter_test(filteractionmissingtagdialogtest
 add_mailcommon_filter_test(filteractionmissingidentitydialogtest
     filteractionmissingidentitydialogtest.cpp
     ../dialog/filteractionmissingidentitydialog.cpp
+    ../../../autotests/dummykernel.cpp
     )
