--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ include(KDECMakeSettings)
 include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(ECMQtDeclareLoggingCategory)
 include(ECMAddTests)
+include(ECMCoverageOption)
+
 
 set(PIM_VERSION "5.4.40")
 set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
