--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,9 @@ add_definitions(-DTRANSLATION_DOMAIN=\"libmailcommon\")
 #add_definitions( -DQT_NO_CAST_FROM_ASCII )
 #add_definitions( -DQT_NO_CAST_TO_ASCII )
 
+if(BUILD_TESTING)
+   add_definitions(-DBUILD_TESTING)
+endif(BUILD_TESTING)
 
 set(libmailcommon_filter_SRCS
   filter/kmfilteraccountlist.cpp
