Adapt to new pimcommon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ set(KMAILTRANSPORT_LIB_VERSION "5.4.40")
 set(KLDAP_LIB_VERSION "5.4.40")
 set(MAILIMPORTER_LIB_VERSION "5.4.40")
 set(LIBKDEPIM_LIB_VERSION "5.4.42")
-set(PIMCOMMON_LIB_VERSION "5.4.44")
+set(PIMCOMMON_LIB_VERSION "5.4.48")
 
 set(AKONADI_VERSION "5.4.40")
 
@@ -61,7 +61,7 @@ find_package(KF5MessageComposer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageCore ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageViewer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5PimCommon ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt5 CONFIG REQUIRED)
 
