use new libkdepim

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(KMIME_LIB_VERSION "5.4.40")
 set(KMAILTRANSPORT_LIB_VERSION "5.4.40")
 set(KLDAP_LIB_VERSION "5.4.40")
 set(MAILIMPORTER_LIB_VERSION "5.4.40")
-set(LIBKDEPIM_LIB_VERSION "5.4.42")
+set(LIBKDEPIM_LIB_VERSION "5.4.46")
 set(PIMCOMMON_LIB_VERSION "5.4.48")
 
 set(AKONADI_VERSION "5.4.40")
@@ -54,7 +54,7 @@ find_package(KF5DBusAddons ${KF5_VERSION} CONFIG REQUIRED)
 find_package(KF5Akonadi ${AKONADI_VERSION} CONFIG REQUIRED)
 find_package(KF5AkonadiMime ${AKONADIMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5Ldap ${KLDAP_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5Libkdepim ${LIBKDEPIM_LIB_VERSION} CONFIG REQUIRED)
+find_package(KF5LibkdepimAkonadi ${LIBKDEPIM_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MailImporter ${MAILIMPORTER_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MailTransport ${KMAILTRANSPORT_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageComposer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
