--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ endif()
 
 find_package(ECM ${ECM_VERSION} CONFIG REQUIRED)
 set(CMAKE_MODULE_PATH ${mailcommon_SOURCE_DIR}/cmake/modules/ ${ECM_MODULE_PATH})
+if (POLICY CMP0053)
+    cmake_policy(SET CMP0053 NEW)
+endif()
 set(LIBRARY_NAMELINK)
 include(GenerateExportHeader)
 include(ECMGenerateHeaders)
