--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -269,3 +269,8 @@ add_mailcommon_filter_test(filteractionmissingidentitydialogtest
     ../dialog/filteractionmissingidentitydialog.cpp
     ../../../autotests/dummykernel.cpp
     )
+
+add_mailcommon_filter_test(filterimporterpathcachetest
+    filterimporterpathcachetest.cpp
+    ../filterimporterpathcache.cpp
+    )
