Implement reordering of favorite folders using DnD
Summary:
In order to separate favorites from the "entity order" QSFPM
used by the folder tree widget (it was always weird that filtering or
changing the sort order for the folder tree widget would affect favorites),
we need the favorites to get their own "ordering" proxy (otherwise
ordering is random, based on ETM population order). So while at it,
I implemented manual reordering of favorites.

BUG: 376073
FIXED-IN: 18.04

Test Plan:
I can reorder favorites (in listview mode) using DnD
and the order is persisted

Reviewers: dvratil, mlaurent

Reviewed By: mlaurent

Subscribers: #kde_pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D8884

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -5,3 +5,6 @@ set(KDEPIMLIBS_RUN_SQLITE_ISOLATED_TESTS TRUE)
 add_akonadi_isolated_test(foldertreewidgettest.cpp)
 target_link_libraries(foldertreewidgettest KF5::Mime KF5::AkonadiWidgets KF5::MailCommon)
 
+add_akonadi_isolated_test(favoritestest.cpp)
+target_link_libraries(favoritestest KF5::Mime KF5::AkonadiWidgets KF5::MailCommon)
+
