--- a/KF5MailCommonConfig.cmake.in
+++ b/KF5MailCommonConfig.cmake.in
@@ -4,5 +4,6 @@ find_dependency(KF5Akonadi "@AKONADI_VERSION@")
 find_dependency(KF5AkonadiMime "@AKONADIMIME_LIB_VERSION@")
 find_dependency(KF5MessageComposer "@MESSAGELIB_LIB_VERSION@")
 find_dependency(KF5PimCommon "@MESSAGELIB_LIB_VERSION@")
+find_dependency(KF5Completion "@KF5_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5MailCommonTargets.cmake")
