--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,10 @@ set_package_properties(Xsltproc PROPERTIES DESCRIPTION "XSLT processor from libx
 remove_definitions( -DQT_NO_CAST_FROM_ASCII )
 
 add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
-
+#if (${KF5Config_VERSION} STRGREATER "5.56.0")
+#        add_definitions(-DQT_NO_FOREACH)
+#        MESSAGE(STATUS "compile without foreach")
+#endif()
 ########### CMake Config Files ###########
 set(CMAKECONFIG_INSTALL_DIR "${KDE_INSTALL_CMAKEPACKAGEDIR}/KF5MailCommon")
 
