--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,5 +122,9 @@ add_subdirectory(src)
 if(BUILD_TESTING)
     add_subdirectory(autotests)
 endif()
-install( FILES mailcommon.renamecategories mailcommon.categories DESTINATION ${KDE_INSTALL_CONFDIR} )
+if (${ECM_VERSION} STRGREATER "5.58.0")
+    install(FILES mailcommon.renamecategories mailcommon.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+else()
+    install(FILES mailcommon.renamecategories mailcommon.categories  DESTINATION ${KDE_INSTALL_CONFDIR})
+endif()
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
