--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,8 +78,16 @@ find_package(KF5Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt5 ${PHONON_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5DesignerPlugin ${KF5_MIN_VERSION} CONFIG)
-set_package_properties(KF5DesignerPlugin PROPERTIES DESCRIPTION "KF5 designer plugin" TYPE OPTIONAL)
+
+set(USE_NEW_DESIGNERPLUGIN_MACRO false)
+if (ECM_VERSION VERSION_GREATER "5.61.0")
+       option(BUILD_DESIGNERPLUGIN "Build plugin for Qt Designer" ON)
+       add_feature_info(DESIGNERPLUGIN ${BUILD_DESIGNERPLUGIN} "Build plugin for Qt Designer")
+       set(USE_NEW_DESIGNERPLUGIN_MACRO true)
+else()
+       find_package(KF5DesignerPlugin ${KF5_MIN_VERSION} CONFIG)
+       set_package_properties(KF5DesignerPlugin PROPERTIES DESCRIPTION "KF5 designer plugin" TYPE OPTIONAL)
+endif()
 
 ecm_setup_version(PROJECT VARIABLE_PREFIX MAILCOMMON
                         VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/mailcommon_version.h"
